--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <main>
-  <h1>Hello from Angular <strong>4</strong> App with Webpack</h1>
-  <img src="../assets/images/angular.png">
+  <router-outlet></router-outlet>
 </main>
